# darnit

./: .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  TODO.md  example.baseline.toml  example.project.toml  example.project.yaml  main.py  pyproject.toml  vulture_allowlist.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  sbom.yml  upstream-spec-check.yml
.project/: darnit.yaml  project.yaml
.specify/memory/: constitution.md
docs/: ARCHITECTURE_RESEARCH_BRIEF.md  ATTESTATION_SPEC.md  DARNIT_FRAMEWORK_DESIGN.md  DECISION_FLOWS.md  DEPENDENCIES.md  FRAMEWORK_DESIGN.md  GOVERNANCE_DOCS_DESIGN.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  SARIF_DESIGN.md  SAST-POLICY.md  SCA-POLICY.md  SECRETS-POLICY.md  SECURITY_GUIDE.md  TEST-REQUIREMENTS.md  TEST_REPO_DESIGN.md  USAGE_GUIDE.md  WORKFLOW.md
docs/design/: CONTEXT_PROMPTS.md  CONTEXT_SIEVE_DESIGN.md  cncf-project-spec-analysis.md  reproducibility-attestation-system.md
docs/examples/: README.md
docs/examples/declarative-framework/: example-framework.toml
docs/getting-started/: README.md  cel-reference.md  development-workflow.md  environment-setup.md  framework-development.md  implementation-development.md  testing.md  troubleshooting.md  using-skills.md
docs/tutorials/: add-new-control.md  create-new-implementation.md
openspec/changes/canonical-owner-repo-detection/: tasks.md
openspec/changes/extract-sieve-audit-loop/: design.md  proposal.md
openspec/changes/improve-checks-and-remediations/: design.md  proposal.md  tasks.md
openspec/changes/toml-schema-v2/: tasks.md
openspec/specs/cel-expressions/: spec.md
openspec/specs/framework-agnostic-reporting/: spec.md
openspec/specs/framework-design/: spec.md
openspec/specs/handler-pipeline/: spec.md
openspec/specs/implementation-provided-tools/: spec.md
openspec/specs/plugin-registry/: spec.md
openspec/specs/remediation-manual-guidance/: spec.md
openspec/specs/repo-identity-resolution/: spec.md
scripts/: create-test-repo.sh  test_e2e_context.py  test_e2e_github.py  validate_sync.py  verify-attestation.sh
specs/001-tiered-control-automation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tiered-control-automation/checklists/: comprehensive.md  requirements.md
specs/001-tiered-control-automation/contracts/: context-field-protocol.md  sieve-result-extensions.md  toml-schema-extensions.md
specs/005-getting-started-guide/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-getting-started-guide/checklists/: requirements.md
specs/006-detailed-stride-threats/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-detailed-stride-threats/checklists/: requirements.md
specs/006-detailed-stride-threats/contracts/: mcp-tool-contract.md
specs/007-threatmodel-remediation-handler/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-threatmodel-remediation-handler/checklists/: requirements.md
specs/008-skills-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-skills-orchestration/checklists/: requirements.md
specs/008-skills-orchestration/contracts/: cli-profile-flag.md  mcp-profile-parameter.md
specs/009-context-aware-remediation/: spec.md
specs/010-threat-model-ast/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-threat-model-ast/checklists/: requirements.md
specs/010-threat-model-ast/contracts/: handler-contract.md  opengrep-runner-contract.md  output-format-contract.md
tests/: __init__.py  conftest.py  test_lint.py  test_main.py
tests/darnit/: __init__.py  test_audit_next_steps.py  test_cli.py  test_config_resolver.py  test_skills_spec.py
tests/darnit/attestation/: __init__.py  test_generator.py  test_predicate.py
tests/darnit/config/: __init__.py  test_audit_profiles.py  test_context_schema.py  test_context_storage.py  test_control_loader.py  test_framework_context.py  test_merger.py
tests/darnit/context/: __init__.py  test_context_sieve.py  test_detectors.py  test_dot_project.py
tests/darnit/core/: __init__.py  test_audit_cache.py  test_discovery.py  test_handlers.py  test_logging.py  test_models.py  test_plugin.py  test_repo_detection.py  test_utils.py  test_verification.py
tests/darnit/filtering/: test_filters.py
tests/darnit/locate/: test_locator.py  test_normalizer.py
tests/darnit/remediation/: __init__.py  test_context_validator.py  test_executor.py  test_executor_scan_vars.py  test_helpers.py
tests/darnit/server/: test_factory.py  test_registry.py
tests/darnit/sieve/: __init__.py  test_builtin_handlers.py  test_cel_evaluator.py  test_invariants.py  test_models.py
tests/darnit/storage/: test_backends.py
tests/darnit/threat_model/: __init__.py  test_models.py
tests/darnit/tools/: test_audit_profile_filter.py
tests/darnit_baseline/: __init__.py  test_audit_org_tool.py  test_checks.py  test_context_validation_dry_run.py  test_get_pending_context.py  test_handler_dispatch_integration.py  test_implementation.py  test_integration_e2e.py  test_profiles.py  test_remediation_project_integration.py  test_remediation_smoke.py  test_tools_signatures.py
tests/darnit_baseline/attestation/: test_generator.py  test_predicate.py
tests/darnit_baseline/remediation/: test_scanner.py  test_template_rendering.py
tests/darnit_baseline/threat_model/: conftest.py  test_chains.py  test_discovery_confidence.py  test_discovery_models.py  test_file_discovery.py  test_generators.py  test_models.py  (+7 more)
tests/darnit_example/: test_implementation.py
tests/darnit_gittuf/: test_handlers.py  test_implementation.py
tests/integration/: test_mcp_server.py
(+69 files in other folders)
