[project]
name = "darnit-mcp"
version = "0.1.0"
description = "MCP server for compliance auditing using the darnit framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Michael Lieberman" }
]
keywords = ["security", "compliance", "mcp", "openssf", "baseline", "osps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "darnit",
    "darnit-baseline",
    "darnit-example",
    "darnit-gittuf",
]

[project.urls]
Homepage = "https://github.com/kusaridev/darnit-mcp"
Repository = "https://github.com/kusaridev/darnit-mcp"
Issues = "https://github.com/kusaridev/darnit-mcp/issues"

[project.optional-dependencies]
attestation = [
    "darnit[attestation]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "vulture>=2.11",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
darnit = { workspace = true }
darnit-baseline = { workspace = true }
darnit-example = { workspace = true }
darnit-gittuf = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may require git/gh)",
    "slow: Slow tests",
    "upstream: Upstream spec sync tests (run nightly, excluded by default)",
]
filterwarnings = [
    "ignore::DeprecationWarning:darnit_baseline.rules",
]

[tool.coverage.run]
source = ["packages/darnit/src", "packages/darnit-baseline/src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "mypy>=1.8.0",
    "ruff>=0.8.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
# Gradually enable stricter checks
packages = [
    "darnit",
    "darnit_baseline",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes (includes F401 unused imports, F841 unused variables)
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (Python version upgrades)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E731",   # lambda assignment (sometimes useful)
    "B008",   # function call in default argument (needed for FastAPI/MCP)
    "SIM102", # nested if (sometimes more readable than combined)
    "SIM105", # contextlib.suppress (explicit try-except often clearer)
    "SIM108", # ternary operator (readability preference)
    "SIM110", # any() suggestion (explicit loop often clearer)
    "SIM116", # dict comprehension (sometimes explicit is clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM", "E402"]  # Less strict for tests, allow late imports
"scripts/*" = ["E402"]  # Allow late imports in scripts
"docs/examples/*" = ["B", "SIM", "E402"]  # Less strict for examples

[tool.ruff.lint.isort]
known-first-party = ["darnit", "darnit_baseline", "darnit_example"]

[tool.bandit]
exclude_dirs = ["tests", "docs/examples"]
skips = ["B101"]  # Allow assert statements
